# mpi-pi

./: Cargo.toml  README.md
src/: common.rs  lib.rs  main.rs  method.rs
